feat: run streaming local